stop event cards text getting cut off.

--- a/CooperationHullMainSite/wwwroot/css/site.css
+++ b/CooperationHullMainSite/wwwroot/css/site.css
@@ -956,7 +956,7 @@ section:has(+ .call-out-block-wrapper) {
 
     .event-item {
         width: 350px;
-        height: 450px;
+        min-height: 100%;
     }
 
     #happening-next-boxes-container {
